# test_for_yew2

./: Cargo.toml  index-46684e009494a618.js  index-46684e009494a618_bg.wasm  index.html  styles.css
.github/workflows/: rust.yml
src/: lib.rs  macros.rs
src/components/: canvas.rs  components_list.rs  home.rs  mod.rs  settings.rs  signals.rs  svg.rs
