[package]
name = "website"
version = "0.1.0"
authors = ["yportne13 <yportne@163.com>"]
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = true

[dependencies]
wasm-bindgen = "0.2.79"
yew = "0.19"
yew-router = "0.16"
gloo-utils = "0.1"
gloo-console = "0.2"
serde = { version = "1.0", features = ["derive"] }
gloo = "0.6"

material-yew = { git = "https://github.com/hamza1311/material-yew", features = ["full"], rev = "1bfb89d" }
unindent = "0.1"

[dependencies.syntect]
version = "4.5"
default-features = false
features = [
    "html",
    "dump-load",
    "regex-fancy"
]

[dependencies.web-sys]
version = "0.3.4"
# We need to enable the `DomRect` feature in order to use the
# `get_bounding_client_rect` method.
features = [
    "console",
    "HtmlElement",
    "MouseEvent",
    "DomRect",

    "HtmlMetaElement",
    "Document",
    "Element",
    "DocumentFragment",
    "HtmlTemplateElement",
    "MediaQueryList",

    "CanvasRenderingContext2d",
    "HtmlCanvasElement",
    "Window",
]

#[build-dependencies]
#pulldown-cmark = "0.8"
#syntect = { version = "4.5", default-features = false, features = ["default-fancy"] }
